--- a/examples/react-table/index.html
+++ b/examples/react-table/index.html
@@ -2,6 +2,9 @@
   body, html {
     margin: 0;
   }
+  * {
+    box-sizing: border-box;
+  }
 </style>
 <div id="root"></div>
 <script src="./src/index.tsx"></script>
